syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc GetAllUsers (Empty) returns (UsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (User);
  rpc ValidateUser (GetUserByIdRequest) returns (UserValidationResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
}

message UsersResponse {
  repeated User users = 1;
}

message UserValidationResponse {
  bool exists = 1;
  User user = 2;
}

message Empty {}